--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#products">Our Products</a></li>
                     <li><a href="#contact">Contact Us</a></li>
-                    <li><a href="" target="_blank" class="link">docso.aushadhbiotech.com</a></li>
+                    <li><a href="https://docso.aushadhbiotech.com/" target="_blank" class="link">docso.aushadhbiotech.com</a></li>
                 </ul>
             </nav>
         </div>
